--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,18 +1,43 @@
-<!DOCTYPE html>
-<html xml:lang="en" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/dist/css/bootstrap.css}"/>
+
     <title>Sitodo</title>
 </head>
 <body>
-<h1>Your Todo List</h1>
-<form action="#" th:action="@{${id_list != null} ? '/list/' + ${id_list} : '/list'}" method="post">
-    <input type="text" id="id_new_item" name="item_text" placeholder="Enter an item"/>
-</form>
-<table id="id_list_table">
-    <tr th:if="${items != null}" th:each="item : ${items}">
-        <td th:text="${item.title}"></td>
-    </tr>
-</table>
+<div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a th:href="@{${id_list != null} ? '/list/' + ${id_list} : '/list'}"
+           class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <img class="bi me-2" src="/images/logo_placeholder.png" width="160" height="40"/>
+            <span class="fs-4">SITODO</span>
+        </a>
+    </header>
+    <table id="id_list_table" class="table caption-top">
+        <caption class="display-1">Your Todo List</caption>
+        <thead class="table-dark">
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Task</th>
+            <th scope="col">Status</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:if="${items != null}" th:each="item : ${items}">
+            <td>TODO</td>
+            <td th:text="${item.title}"></td>
+            <td>TODO</td>
+        </tr>
+        </tbody>
+    </table>
+    <form th:action="@{${id_list != null} ? '/list/' + ${id_list} : '/list'}" method="post">
+        <input type="text" id="id_new_item" name="item_text" placeholder="Enter an item"/>
+    </form>
+</div>
+<script th:src="@{/webjars/bootstrap/5.1.3/dist/js/bootstrap.bundle.js}"></script>
 </body>
 </html>
